--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -100,9 +100,6 @@
 
 .alert {padding-top: 70px;}
 
-
-
-
  .info {
    position: absolute; /* let's us move the text around and not worry about the image */
    top: 15%; /* position the text 15% away from the top */
@@ -115,50 +112,25 @@
    line-height: 1.6;
    display: none;
  }
+ /* contact Section*/
 
- .proj-title { font-weight:100;}
+.form-group {
+   width: 90%;
+   margin: 0px 40px 0px 40px;}
 
-
-
-
- .form-group { width: 100%;}
- .form-control { width: 100%;}
-
+.submit-button {margin: 30px 0px 0px 40px;}
  /*Footer Section*/
 
  .footer-section{
-   height: 160px;
    background: linear-gradient(to right, #7fbd98, #229d53);
    color: #fff;
    font-family: 'Poppins', sans-serif;
    width: 100% !important;
+   padding: 40px 0px 40px 0px;
+   margin-top: 50px;
+ }
 
- }
- .footer-title {
-   font-size: 1.5rem;
-   margin: 5 0;
-   padding-bottom: 20px;
-   padding-top: 10px;
- }
- .footer-list {
-   display: inline-block;
-   text-align: center;
- }
- .footer-list li {
-   list-style: none;
-   padding: 0 60px;
-   display: inline-block;
-   font-size: 1em;
- }
- .footer-list li a {
-   color: #black;
-   font-size: 1.8rem;
-   transition: 600ms ease;
-   text-decoration: none;
- }
- .footer-list li a:hover {
-   color: white;
- }
+
 
  @media (max-width: 768px) {
    #work .container .img-fluid {
@@ -167,13 +139,7 @@
    #video { width:100%;}
    #contact h1 { padding-top: 15px;}
    .map1 { height: 300px; }
-   .footer-section .container {height: 100px;}
-   .footer-list li{
-     margin: none;
-     padding: 0 2px;
-     font-size: 0.5em;
-   }
-   .footer-list .copywrite {
+   .copywrite {
      float: right;
      padding-top: 20px;
    }
