--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,85 +1,80 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Vacation destinations</title>
+<head>
+  <title>Vacation destinations</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script> -->
 
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> -->
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
 
-  </head>
+</head>
 
-  <body data-spy="scroll" data-target=".navbar" class="bgimg-2">
+<body data-spy="scroll" data-target=".navbar" class="bgimg-2">
 
-    <nav class="navbar navbar-light bg-light full-text" role="navigation" id="nav">
+  <nav class="navbar navbar-light bg-light full-text" role="navigation" id="nav">
 
-     <section class="left">
+    <section class="left">
       <ul class="nav nav-pills">
-       <li class="nav-item"> <%= link_to("Vacationdestinations", root_path) %>
-       </li>
+        <li class="nav-item"> <%= link_to("Vacationdestinations", root_path) %>
+        </li>
 
-     </section>
+      </section>
 
-     <section class="right">
-      <ul class="nav nav-pills">
+      <section class="right">
+        <ul class="nav nav-pills">
 
-       <li class="nav-item"> <%= link_to("About", simple_pages_about_path) %><i class="fas fa-book-reader"></i>
-       <li class="nav-item"> <%= link_to("Products", products_path) %>
-       <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %><i class="fas fa-phone"></i>
-         <% if user_signed_in? %>
-         <li class="nav-item">
-         <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav") %>
-         </li>
-         <% else %>
-         <li class="nav-item">
-         <%= link_to('Login', new_user_session_path, class: "nav") %>
-         </li>
-         <% end %>
-         <li id="search-bar">
-             <%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
-             <%= form.submit 'Search', class: 'btn btn-submit' %>
-             <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
-           <% end %>
-         </li>
-      </ul>
-
-     </section>
-    </nav>
-
-  <% if notice %>
-    <p id="notice" class="alert alert-primary"><%= notice %></p>
-  <% end %>
-
-
-  <%= yield %>
-  <footer class="container-fluid footer-section">
-      <section class="text-center">
-          <h2 class="footer-title">Follow Me</h2>
-              <ul class="footer-list">
-                  <li><a class="fab fa-facebook" target="_blank" href="https://www.facebook.com/kevin.dath">facebook</a></li>
-                  <li><a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/kevin-dath-3b294579">linkedin</a></li>
-                  <li><a class="fab fa-instagram" target="_blank" href="https://www.instagram.com/chimericano/">instagram</a></li>
-                  <li><a class="twitter-follow-button" href="https://twitter.com/nachhaltbar?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @nachhaltbar</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-                  <li class="copywrite"> &copy;2018 Kevin Dath</li>
+          <li class="nav-item"> <%= link_to("About", simple_pages_about_path) %><i class="fas fa-book-reader"></i>
+            <li class="nav-item"> <%= link_to("Products", products_path) %>
+              <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %><i class="fas fa-phone"></i>
+                <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav") %>
+                </li>
+                <% else %>
+                <li class="nav-item">
+                  <%= link_to('Login', new_user_session_path, class: "nav") %>
+                </li>
+                <% end %>
+                <li id="search-bar">
+                  <%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
+                  <%= form.submit 'Search', class: 'btn btn-submit' %>
+                  <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
+                  <% end %>
+                </li>
               </ul>
-       </section>
-  </footer>
+
+            </section>
+          </nav>
+
+          <% if notice %>
+          <p id="notice" class="alert alert-primary"><%= notice %></p>
+          <% end %>
 
 
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-   <script src="jquery.elevatezoom.js" type="text/javascript"></script>
-  </body>
-</html>
+          <%= yield %>
+          <footer class="container-fluid footer-section">
+            <section class="text-center">
+
+                <p> &copy;2018 Kevin Dath</p>
+
+            </section>
+          </footer>
+
+
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+          <script src="jquery.elevatezoom.js" type="text/javascript"></script>
+        </body>
+        </html>
