--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -17,5 +17,5 @@
     <%= form.text_area :message, class: "form-control", placeholder: "Enter Message", rows: 5 %>
   </div>
 </div>
-<%= form.submit "Send", class: "form_label" %>
+<%= form.submit "Send", class: "submit-button" %>
 <% end %>
