--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-
+.new_comment {padding: 20px 0px 20px 0px}
 
 .product {padding-top: 80px;}
 .productname {
