--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -110,6 +110,7 @@
   padding-right: 10px;
   padding-top: 10px;
 }
+
  /*Simple-pages */
 
  /*Landing-page */
@@ -168,46 +169,65 @@
 
 
 
- @media (max-width: 970px) {
-/*   .full-text { display: none; } */
-   #work .container .img-fluid {
-     margin: 0; }
-   #resume .btn { float: right;}
-   #video { width:100%;}
-   #contact h1 { padding-top: 15px;}
-   .map1 { height: 300px; }
-   .copywrite {
-     float: right;
-     padding-top: 20px;
-   }
- }
+ @media (max-width: 1000px) {
 
- @media (max-width: 750px) {
-/*   .full-text { display: none; } */
-   .container {padding: 3%;}
+   .full-text { display: none; }
    .short-text {
      display: inline-block;
+     width: 100% !important;
      position: fixed;
      padding-left: 55px;
      font-size: 1.2em;
        }
-
-   .navbar .center { text-align: center;}
-   #work-section { padding-top: 10px;}
-   #work-section h1 { padding-bottom: 10px;}
-   #video { width: 100%;}
-   #about h1 { padding-top: -140px;}
-   #resume {display: inline-block;}
-   .mb-0 { font-size: .5em;}
-   #contact h1 {padding-top: 15px;}
-   .footer-section .container {height: 100px;}
-   .footer-list li {
-    margin: none;
-    padding: 0 2px;
-    font-size: 0.5em;
+   /* Dropdown Button */
+   .navbar .left {float: left;}
+   .dropbtn {
+     background-color: #3498DB;
+     color: white;
+     font-size: 1em;
+     border: none;
+     cursor: pointer;
    }
-   .footer-list .copywrite {
-    float: right;
-    padding-top: 20px;
+   .right .dropbtn {
+     float: right;
+     padding: 10px}
+
+   /* Dropdown button on hover & focus */
+   .dropbtn:hover, .dropbtn:focus {
+     background-color: #2980B9;
+   }
+
+   /* The container <div> - needed to position the dropdown content */
+   .dropdown {
+     position: absolute;
+     display: inline-table;
+   }
+
+   /* Dropdown Content (Hidden by Default) */
+   .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: #f1f1f1;
+     min-width: 160px;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     z-index: 1;
+   }
+
+   /* Links inside the dropdown */
+   .dropdown-content a {
+     color:  #7fbd98;
+     padding: 12px 16px;
+     text-decoration: none;
+   }
+
+   /* Change color of dropdown links on hover */
+   .dropdown-content a:hover { background-color: #ddd}
+
+   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+   .show {
+     position: inherit;
+     display: inline-flex;
+     float: left;
+     padding: 10px;
    }
  }
