--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,8 +4,8 @@
 
       <div class="col-sm-12 col-md-6 col-lg-6">
         <%= image_tag(@product.image_url, width: "350", class: "img-fluid img-zoom", data_zoom_image:"@product.image_url") if @product.image_url%>
-        <%= link_to 'Edit', edit_product_path(@product) %>
-        <%= link_to 'Back', products_path %>
+        <% if signed_in? && current_user.admin? %><%= link_to 'Edit', edit_product_path(@product) %><% end %>
+
         <% cache @product do %>
         <p>
           <%= @product.name %>
@@ -18,7 +18,6 @@
         <p class="price-tag">
           <%= number_to_currency(@product.price, :unit => "€") %>
         </p>
-
       </div>
       <div class="col-sm-12  col-md-6 col-lg-6">
         <%= render 'shared/new_comment' %>
@@ -26,6 +25,7 @@
         <%= render partial: "shared/stripe_checkout_button" %>
         <%= hidden_field_tag(:product_id, @product.id) %>
         <% end %>
+          <%= will_paginate @comments %>
       </div>
 
 
