--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <hr>
-    <p class= "comment-name"><%= comment.user.first_name if comment.user %><small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
+    <p class= "comment-name"><%= comment.user ? comment.user.first_name : "anonymous" %><small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
     <div class="rated comment-rating" data-score="<%= comment.rating %>"></div>
     <p class= "comment-name"><%= comment.body %></p>
     <br>
