--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           <footer class="container-fluid footer-section">
             <section class="text-center">
 
-              <p> &copy;2018 Kevin Dath</p>
+              <p> &copy;2019 Dath Consulting</p>
 
             </section>
           </footer>
