--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="index-content">
+<div class="index-content margin">
   <div class="container">
     <div class="row product" data-product-id="<%= @product.id %>">
 
