--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,9 +2,9 @@
 <div class= "container">
   <div class="row margin">
     <% @orders.each do |order| %>
-    <div class="col-sm">
+    <div class="col-sm col-md-12 col-lg-3">
       <h2>
-        Order # <%= order.id %>:
+        Your Order:
         <%= link_to order.product.name, order %>
       </h2>
       <p><%= order.product.description %></p>
