--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div class="page-wrap" id="landing_page">
+<div>
 
   <div id="carousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -17,10 +17,10 @@
         <%= image_tag(product.image_url, class: "img-fluid", id: "carousel_images") %>
 
         <div class="carousel-caption d-none d-md-block">
-          <<h3 class="landing-name"><%= link_to product.name, product %></h3>
+          <<h3 class="landing-name"><%= link_to product.name, product %>  </h3>
         </div>
       </div>
-      <% end %>
+    <% end %>
     </div>
 
     <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
